--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   flutter_slidable: ^4.0.0
   http: ^1.4.0
   dio: ^5.8.0+1
-
+  webview_flutter: ^4.11.0
+  timeago: ^3.7.1
+  shared_preferences: ^2.5.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
