--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,11 @@ dependencies:
   shared_preferences: ^2.5.3
   provider: ^6.1.5
   cached_network_image: ^3.4.1
-  bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   sqflite: ^2.4.2
   flutter_localization: ^0.3.2
-  responsive: ^0.3.11+11
-  device_preview: ^1.2.0
+  rename: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
